--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
 
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
@@ -18,6 +18,7 @@
         <activity android:name=".UI.MainActivity" />
         <activity android:name=".UI.SignUpActivity" />
         <activity android:name=".UI.LoginActivity" />
+        <activity android:name=".UI.ActivityLessonList"/>
         <activity android:name=".Utils.ConnectBluetoothActivity" />
         <activity
             android:name=".UI.SplashActivity"
