--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,10 @@
         <activity android:name=".UI.MainActivity" />
         <activity android:name=".UI.SignUpActivity" />
         <activity android:name=".UI.SplashActivity" />
-        <activity android:name=".UI.LessonListActivity"/>
+        <activity android:name=".UI.LoginActivity"/>
         <activity android:name=".UI.ConnectBluetoothActivity" />
         <activity
-            android:name=".UI.LoginActivity"
+            android:name=".UI.LessonListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
