--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.RobiiTCC">
         <activity android:name=".UI.MainActivity" />
@@ -20,6 +20,7 @@
         <activity android:name=".UI.LessonListActivity" />
         <activity android:name=".UI.LoginActivity"/>
         <activity android:name=".UI.ConnectBluetoothActivity" />
+        <activity android:name=".UI.LevelOneActivity"/>
         <activity
             android:name=".UI.SplashActivity"
             android:exported="true">
