--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,9 @@
         <activity android:name=".UI.SignUpActivity" />
         <activity android:name=".UI.LoginActivity"/>
         <activity android:name=".UI.LevelOneActivity"/>
+        <activity android:name=".UI.LessonListActivity"/>
         <activity
-            android:name=".UI.LessonListActivity"
+            android:name=".UI.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
