--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         <activity android:name=".UI.MainActivity" />
         <activity android:name=".UI.SignUpActivity" />
         <activity android:name=".UI.LoginActivity"/>
-        <activity android:name=".UI.LevelOneActivity"/>
+        <activity android:name=".UI.LessonListActivity"/>
+        <activity android:name=".UI.LevelOne.OneActivity"/>
+        <activity android:name=".UI.LevelOne.SecondActivity"/>
+        <activity android:name=".UI.LevelOne.ThreeActivity"/>
         <activity android:name=".UI.LessonListActivity"/>
         <activity
             android:name=".UI.SplashActivity"
