--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,20 @@
         <activity android:name=".UI.SignUpActivity" />
         <activity android:name=".UI.LoginActivity"/>
         <activity android:name=".UI.LessonListActivity"/>
-        <activity android:name=".UI.LevelOne.OneActivity"/>
-        <activity android:name=".UI.LevelOne.SecondActivity"/>
-        <activity android:name=".UI.LevelOne.ThreeActivity"/>
-        <activity android:name=".UI.LessonListActivity"/>
+        <activity android:name=".UI.LevelOne.LevelMainOne"/>
+        <activity android:name=".UI.LevelOne.LevelOneSecondActivity"/>
+        <activity android:name=".UI.LevelOne.LevelOneThreeActivity"/>
+        <activity android:name=".UI.LevelOne.LevelOneFourActivity"/>
+        <activity android:name=".UI.LevelTwo.LevelMainTwo"/>
+        <activity android:name=".UI.LevelTwo.LevelTwoSecondActivity"/>
+        <activity android:name=".UI.LevelThree.LevelMainThree"/>
+        <activity android:name=".UI.LevelThree.LevelThreeSecondActivity"/>
+        <activity android:name=".UI.LevelFour.LevelMainFour"/>
+        <activity android:name=".UI.LevelFour.LevelFourSecondActivity"/>
+        <activity android:name=".UI.LevelFive.LevelMainFive"/>
+        <activity android:name=".UI.LevelFive.LevelFiveSecondActivity"/>
+        <activity android:name=".UI.LevelSix.LevelMainSix"/>
+        <activity android:name=".UI.LevelSix.LevelSixSecondActivity"/>
         <activity
             android:name=".UI.SplashActivity"
             android:exported="true">
